# agentsroom

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
agent_protocol/: README.md  coding-rules.md  ownership.md  protocol.md  review-rules.md
agent_protocol/agent_protocol_design/: 00_protocol_overview.md
agent_protocol/agent_protocol_design/templates/: 01_design_doc_template.md  02_task_doc_template.md  03_checklist_template.md  04_testing_doc_template.md
agent_protocol/archive/: agent_markdown_workflow_plan.md  agent_markdown_working_protocol_design.md
agent_protocol/work/changes/: CHG-0001-agentroom-mvp.md  CHG-0002-production-implementation.md  CHG-0003-security-fixes.md
agent_protocol/work/checklists/: CHK-0001-agentroom-mvp.md  CHK-0002-production-implementation.md
agent_protocol/work/decisions/: ADR-0001-coding-rules.md  ADR-0002-review-rules.md
agent_protocol/work/tasks/: TASK-0001-agentroom-mvp.md  TASK-0002-production-implementation.md  TASK-TEMPLATE.md
agent_protocol/work/templates/: change.md  checklist.md  decision.md  design.md  journey.md  review.md  task.md  todo.md
agentroom/: __init__.py  cli.py  core.py  lifecycle.py  schemas.py  server.py
agentroom/adapters/: __init__.py  base.py  claude_code.py  codex.py  gemini.py
agentroom/delivery/: __init__.py  _http.py  dlq.py  poller.py  webhook.py
agentroom/observability/: __init__.py  logger.py  metrics.py
doc/: agentroom_implementation_architecture.md  agentsroom.md
scripts/: review-check.py
showcase/: README.md  claude_code_localhost_demo.py
tests/: test_agentroom.py  test_e2e_localhost.py  test_http_integration.py
(+1 files in other folders)
