[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentroom"
version = "0.2.0"
description = "File-backed coordination rooms for distributed agents — with webhook dispatch, DLQ retry, LLM adapters, and Prometheus metrics."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agentctl = "agentroom.cli:main"

[tool.setuptools.packages.find]
include = ["agentroom*"]
